add student and group function
